--- a/client/public/css/afterlogin.css
+++ b/client/public/css/afterlogin.css
@@ -62,7 +62,13 @@ main {
   transition: 0.2s;
 }
 
-#customerinput,#amountinput{
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+#customerinput,#amountinput,#customerphoneinput{
   padding: 10px 20px;
   border-radius: 8px;
   font-weight: 500;
