--- a/client/public/css/afterlogin.css
+++ b/client/public/css/afterlogin.css
@@ -110,8 +110,18 @@ form{
 
 
 /* Table */
-.transactions h2 {
+.transactions h2, .linkedtransactions h2 {
   margin-bottom: 15px;
+}
+
+.linkedtransactions{
+  margin-bottom: 2rem;
+  opacity: 0.9;
+  display: none;
+}
+
+.linkedtransactions:hover{
+  cursor: not-allowed;
 }
 
 table {
@@ -178,21 +188,25 @@ td.actions {
 }
 
 /* Table Styling */
-.transactions table {
+.transactions table,
+.linkedtransactions table {
   width: 100%;
   border-collapse: collapse;
   min-width: 600px; /* Ensures scrollability on small screens */
 }
 
 .transactions th,
-.transactions td {
+.transactions td,
+.linkedtransactions th,
+.linkedtransactions td {
   padding: 12px 16px;
   text-align: left;
   border-bottom: 1px solid #ddd;
   white-space: nowrap;
 }
 
-.transactions th {
+.transactions th,
+.linkedtransactions th {
   background-color: #f53325;
   color: white;
 }
@@ -207,13 +221,15 @@ td.actions {
   #dynamic{
     font-size: 1.4rem;
   }
-  .transactions h2 {
+  .transactions h2, .linkedtransactions h2 {
     text-align: center;
     font-size: 1.2rem;
   }
 
   .transactions th,
-  .transactions td {
+  .transactions td ,
+  .linkedtransactions th,
+  .linkedtransactions td {
     font-size: 14px;
     padding: 10px;
   }
@@ -226,15 +242,20 @@ td.actions {
   box-sizing: border-box;
 }
 
-  .transactions thead th {
+  .transactions thead th,
+  .linkedtransactions thead th {
   position: sticky;
   top: 0;
   background-color: #f53325;
   z-index: 1;
 }
 
-#customerinput{
+#customerinput,#customerphoneinput{
   margin-bottom: 1rem;
+}
+
+.customer-actions{
+  text-align: center;
 }
 
 }
